# scrappers-mock

./: .gitignore  .pip-audit-ignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
quality_tests/: __init__.py  conftest.py  test_type_checking.py
scripts/: create-worktree.sh  delete-worktree.sh  lint_and_format.sh  reinstall_packages.sh  security_audit.sh
smoke_tests/: conftest.py  test_type_checking.py
