[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scrappers"
version = "0.1.0"
description = "Job scrapping service mock"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = []

# Workspace configuration
[tool.workspace]
members = [
    "packages/scrapper-service",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
pythonpath = ["packages/*/src"]
