[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrappers-mock"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.19.1",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["packages", "smoke_tests"]
markers = [
    "smoke: marks tests as smoke tests (deselect with '-m \"not smoke\"')",
]
